--- a/socials.html
+++ b/socials.html
@@ -31,8 +31,8 @@
 
     .social {
       background-color: #eae9e9;
-      width: 55px;
-      height: 55px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       display: grid;
       place-items: center;
@@ -47,7 +47,7 @@
     }
 
     .email:hover {
-      background-color: #23c8c8;
+      background-color: #084c71;
     }
 
     .facebook:hover {
@@ -55,12 +55,11 @@
     }
 
     .instagram:hover {
-      background: rgb(241, 102, 217);
-      background: radial-gradient(circle, rgba(241, 102, 217, 1) 10%, rgba(252, 176, 69, 1) 76%, rgba(253, 29, 29, 1) 100%);
+      background-color:#084c71;
     }
 
     .linkedin:hover {
-      background-color: #0e76a8;
+      background-color: #084c71;
     }
 
     .twitter:hover {
